fix(wip): Formatting of the skills sections for easier readability

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,10 +101,18 @@ li a:hover {
   font-size: 4vw;
 }
 
+.skills h2{
+  font-size: 2vw;
+}
+
+.skills h3{
+  font-size: 1.5vw;
+}
+
 .skills p{
-  min-height: 9vh;
-  max-height: fit-content;
+  min-height: fit-content;
   text-align: center;
+  font-size: 1vw;
 }
 
 
@@ -114,6 +122,7 @@ li a:hover {
   display: inline-block;
   padding: 5px 10px;
   border-radius: 20px;
+  font-size: 1vw;
 }
 
 .dev{
@@ -221,6 +230,7 @@ li a:hover {
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(13, 1fr);
   gap: 3vh;
+  /*gap: 1rem;*/
 }
 
 .online_portfolio{
